# gsoc_vector

./: .gitignore  CMakeLists.txt  gsoc_vector.sln
gsoc_vector/: gsoc_vector.vcxproj  main.cpp  vector.h
src/: CMakeLists.txt  allocator_mock.h  main.cpp  vector.h
